--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -114,6 +114,7 @@
     "@types/ramda": "0.25.48",
     "node-sass": "^4.11.0",
     "rimraf": "2.6.3",
+    "script-ext-html-webpack-plugin": "^2.1.3",
     "vue-template-compiler": "^2.6.4"
   },
   "publishConfig": {
